add scripted plugin to build